Added domain join capabilities to VagrantFile

--- a/zabbix/files/zabbix_agentd.conf.j2
+++ b/zabbix/files/zabbix_agentd.conf.j2
@@ -1,4 +1,4 @@
 LogFile=C:\zabbix\zabbix_agentd.log
-Server=zabbix-server-00
+Server={{ zabbix_backend }}
 ServerActive=zabbix-server-00
 Hostname={{ inventory_hostname }}
